tidied up before PR